gen/PseintGrammarParser.java
// Generated from C:/Users/juans/Desktop/Lenguajes de programacion/InterTrad/grammar\PseintGrammar.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PseintGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		F_SALG_SP=1, FIN_F_SALG_SP=2, PROC_ALG=3, FIN_PROC_ALG=4, DEFINIR=5, COMO=6, 
		DIMENSION=7, LEER=8, ESCRIBIR=9, SI=10, ENTONCES=11, SINO=12, FINSI=13, 
		SEGUN=14, HACER=15, CASO=16, DE=17, OTRO=18, MODO=19, FINSEGUN=20, MIENTRAS=21, 
		FINMIENTRAS=22, REPETIR=23, HASTA=24, QUE=25, PARA=26, CON=27, PASO=28, 
		FINPARA=29, BORRAR=30, LIMPIAR=31, PANTALLA=32, ESPERAR=33, SEGUNDOS=34, 
		MILISEGUNDOS=35, TECLA=36, T_DATO=37, T_NUM=38, T_LOGICO=39, T_CARAC=40, 
		TD_REAL=41, TD_ENTERO=42, TD_CADENA=43, VERDADERO=44, FALSO=45, PYC=46, 
		ASIG=47, PAR_IZQ=48, PAR_DER=49, COR_IZQ=50, COR_DER=51, COMA=52, GEQ=53, 
		LEQ=54, DIFT=55, GRE=56, LOW=57, EQU=58, OP_Y=59, OP_OR=60, OP_NEG=61, 
		MAS=62, MENOS=63, MUL=64, DIV=65, POT=66, MOD=67, DOSP=68, ID=69, WS=70, 
		COMMENT=71;
	public static final int
		RULE_code = 0, RULE_fun_salg_spro = 1, RULE_return_funcion = 2, RULE_f_params = 3, 
		RULE_f_args = 4, RULE_main = 5, RULE_commands = 6, RULE_command = 7, RULE_definicion = 8, 
		RULE_def_vars = 9, RULE_dimension = 10, RULE_dim_vars = 11, RULE_dim_sizes = 12, 
		RULE_num_expr = 13, RULE_oper_num = 14, RULE_asignacion = 15, RULE_expr = 16, 
		RULE_oper_dos = 17, RULE_oper_uni = 18, RULE_array_pos = 19, RULE_func_par = 20, 
		RULE_leer = 21, RULE_escribir = 22, RULE_si = 23, RULE_segun = 24, RULE_mientras = 25, 
		RULE_repetir = 26, RULE_para = 27, RULE_borrar = 28, RULE_esperar = 29, 
		RULE_tiempo = 30, RULE_tecla = 31, RULE_call = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"code", "fun_salg_spro", "return_funcion", "f_params", "f_args", "main", 
			"commands", "command", "definicion", "def_vars", "dimension", "dim_vars", 
			"dim_sizes", "num_expr", "oper_num", "asignacion", "expr", "oper_dos", 
			"oper_uni", "array_pos", "func_par", "leer", "escribir", "si", "segun", 
			"mientras", "repetir", "para", "borrar", "esperar", "tiempo", "tecla", 
			"call"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "';'", "'<-'", 
			"'('", "')'", "'['", "']'", "','", "'>='", "'<='", "'<>'", "'>'", "'<'", 
			"'='", null, null, null, "'+'", "'-'", "'*'", "'/'", null, null, "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "F_SALG_SP", "FIN_F_SALG_SP", "PROC_ALG", "FIN_PROC_ALG", "DEFINIR", 
			"COMO", "DIMENSION", "LEER", "ESCRIBIR", "SI", "ENTONCES", "SINO", "FINSI", 
			"SEGUN", "HACER", "CASO", "DE", "OTRO", "MODO", "FINSEGUN", "MIENTRAS", 
			"FINMIENTRAS", "REPETIR", "HASTA", "QUE", "PARA", "CON", "PASO", "FINPARA", 
			"BORRAR", "LIMPIAR", "PANTALLA", "ESPERAR", "SEGUNDOS", "MILISEGUNDOS", 
			"TECLA", "T_DATO", "T_NUM", "T_LOGICO", "T_CARAC", "TD_REAL", "TD_ENTERO", 
			"TD_CADENA", "VERDADERO", "FALSO", "PYC", "ASIG", "PAR_IZQ", "PAR_DER", 
			"COR_IZQ", "COR_DER", "COMA", "GEQ", "LEQ", "DIFT", "GRE", "LOW", "EQU", 
			"OP_Y", "OP_OR", "OP_NEG", "MAS", "MENOS", "MUL", "DIV", "POT", "MOD", 
			"DOSP", "ID", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PseintGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PseintGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CodeContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PseintGrammarParser.EOF, 0); }
		public List<Fun_salg_sproContext> fun_salg_spro() {
			return getRuleContexts(Fun_salg_sproContext.class);
		}
		public Fun_salg_sproContext fun_salg_spro(int i) {
			return getRuleContext(Fun_salg_sproContext.class,i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).enterCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).exitCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseintGrammarVisitor ) return ((PseintGrammarVisitor<? extends T>)visitor).visitCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_code);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==F_SALG_SP) {
				{
				{
				setState(66);
				fun_salg_spro();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			main();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==F_SALG_SP) {
				{
				{
				setState(73);
				fun_salg_spro();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fun_salg_sproContext extends ParserRuleContext {
		public TerminalNode F_SALG_SP() { return getToken(PseintGrammarParser.F_SALG_SP, 0); }
		public TerminalNode ID() { return getToken(PseintGrammarParser.ID, 0); }
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public TerminalNode FIN_F_SALG_SP() { return getToken(PseintGrammarParser.FIN_F_SALG_SP, 0); }
		public Return_funcionContext return_funcion() {
			return getRuleContext(Return_funcionContext.class,0);
		}
		public F_paramsContext f_params() {
			return getRuleContext(F_paramsContext.class,0);
		}
		public Fun_salg_sproContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fun_salg_spro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).enterFun_salg_spro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).exitFun_salg_spro(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseintGrammarVisitor ) return ((PseintGrammarVisitor<? extends T>)visitor).visitFun_salg_spro(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fun_salg_sproContext fun_salg_spro() throws RecognitionException {
		Fun_salg_sproContext _localctx = new Fun_salg_sproContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_fun_salg_spro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(F_SALG_SP);
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(82);
				return_funcion();
				}
				break;
			}
			setState(85);
			match(ID);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PAR_IZQ) {
				{
				setState(86);
				f_params();
				}
			}

			setState(89);
			commands();
			setState(90);
			match(FIN_F_SALG_SP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_funcionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PseintGrammarParser.ID, 0); }
		public TerminalNode ASIG() { return getToken(PseintGrammarParser.ASIG, 0); }
		public Return_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).enterReturn_funcion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).exitReturn_funcion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseintGrammarVisitor ) return ((PseintGrammarVisitor<? extends T>)visitor).visitReturn_funcion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Return_funcionContext return_funcion() throws RecognitionException {
		Return_funcionContext _localctx = new Return_funcionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_return_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(ID);
			setState(93);
			match(ASIG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class F_paramsContext extends ParserRuleContext {
		public TerminalNode PAR_IZQ() { return getToken(PseintGrammarParser.PAR_IZQ, 0); }
		public F_argsContext f_args() {
			return getRuleContext(F_argsContext.class,0);
		}
		public TerminalNode PAR_DER() { return getToken(PseintGrammarParser.PAR_DER, 0); }
		public F_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).enterF_params(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).exitF_params(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseintGrammarVisitor ) return ((PseintGrammarVisitor<? extends T>)visitor).visitF_params(this);
			else return visitor.visitChildren(this);
		}
	}

	public final F_paramsContext f_params() throws RecognitionException {
		F_paramsContext _localctx = new F_paramsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_f_params);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(PAR_IZQ);
			setState(96);
			f_args();
			setState(97);
			match(PAR_DER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class F_argsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(PseintGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PseintGrammarParser.ID, i);
		}
		public List<TerminalNode> COMA() { return getTokens(PseintGrammarParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(PseintGrammarParser.COMA, i);
		}
		public F_argsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).enterF_args(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).exitF_args(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseintGrammarVisitor ) return ((PseintGrammarVisitor<? extends T>)visitor).visitF_args(this);
			else return visitor.visitChildren(this);
		}
	}

	public final F_argsContext f_args() throws RecognitionException {
		F_argsContext _localctx = new F_argsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_f_args);
		int _la;
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				match(ID);
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(100);
					match(COMA);
					setState(101);
					match(ID);
					}
					}
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case PAR_DER:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public TerminalNode PROC_ALG() { return getToken(PseintGrammarParser.PROC_ALG, 0); }
		public TerminalNode ID() { return getToken(PseintGrammarParser.ID, 0); }
		public CommandsContext commands() {
			return getRuleContext(CommandsContext.class,0);
		}
		public TerminalNode FIN_PROC_ALG() { return getToken(PseintGrammarParser.FIN_PROC_ALG, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseintGrammarVisitor ) return ((PseintGrammarVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(PROC_ALG);
			setState(111);
			match(ID);
			setState(112);
			commands();
			setState(113);
			match(FIN_PROC_ALG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandsContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public CommandsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commands; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).enterCommands(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).exitCommands(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseintGrammarVisitor ) return ((PseintGrammarVisitor<? extends T>)visitor).visitCommands(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandsContext commands() throws RecognitionException {
		CommandsContext _localctx = new CommandsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_commands);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DEFINIR) | (1L << DIMENSION) | (1L << LEER) | (1L << ESCRIBIR) | (1L << SI) | (1L << SEGUN) | (1L << MIENTRAS) | (1L << REPETIR) | (1L << PARA) | (1L << BORRAR) | (1L << LIMPIAR) | (1L << ESPERAR))) != 0) || _la==ID) {
				{
				{
				setState(115);
				command();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public DefinicionContext definicion() {
			return getRuleContext(DefinicionContext.class,0);
		}
		public DimensionContext dimension() {
			return getRuleContext(DimensionContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public LeerContext leer() {
			return getRuleContext(LeerContext.class,0);
		}
		public EscribirContext escribir() {
			return getRuleContext(EscribirContext.class,0);
		}
		public SiContext si() {
			return getRuleContext(SiContext.class,0);
		}
		public SegunContext segun() {
			return getRuleContext(SegunContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public RepetirContext repetir() {
			return getRuleContext(RepetirContext.class,0);
		}
		public ParaContext para() {
			return getRuleContext(ParaContext.class,0);
		}
		public BorrarContext borrar() {
			return getRuleContext(BorrarContext.class,0);
		}
		public EsperarContext esperar() {
			return getRuleContext(EsperarContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).exitCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseintGrammarVisitor ) return ((PseintGrammarVisitor<? extends T>)visitor).visitCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_command);
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				definicion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				dimension();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				asignacion();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(124);
				leer();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(125);
				escribir();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(126);
				si();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(127);
				segun();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(128);
				mientras();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(129);
				repetir();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(130);
				para();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(131);
				borrar();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(132);
				esperar();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(133);
				call();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionContext extends ParserRuleContext {
		public TerminalNode DEFINIR() { return getToken(PseintGrammarParser.DEFINIR, 0); }
		public Def_varsContext def_vars() {
			return getRuleContext(Def_varsContext.class,0);
		}
		public TerminalNode COMO() { return getToken(PseintGrammarParser.COMO, 0); }
		public TerminalNode T_DATO() { return getToken(PseintGrammarParser.T_DATO, 0); }
		public TerminalNode PYC() { return getToken(PseintGrammarParser.PYC, 0); }
		public DefinicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).enterDefinicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PseintGrammarListener ) ((PseintGrammarListener)listener).exitDefinicion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseintGrammarVisitor ) return ((PseintGrammarVisitor<? extends T>)visitor).visitDefinicion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinicionContext definicion() throws RecognitionException {
		DefinicionContext _localctx = new DefinicionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_definicion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(DEFINIR);
			setState(137);
			def_vars();
			setState(138);
			match(COMO);
			setState(139);
			match(T_DATO);
			setState(140);
			match(PYC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
